k8s/student-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
        - name: student-service
          image: microservices-demo/student-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
