k8s/login-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-ui
spec:
  selector:
    app: login-ui
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
