k8s/student-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  selector:
    app: student-service
  ports:
    - port: 8081
      targetPort: 8081
